Fixed header layout issues with user bar

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -65,7 +65,7 @@ div#searchbar input#searchinput {
 	display: inline-block;
 	vertical-align: top;
 	margin-top: 21px;
-	width: 500px;
+	width: 430px;
 	height: 20px;
 	margin: 21px 0px 21px 10px;
 	padding: 3px;
@@ -93,7 +93,8 @@ div#searchbar input#searchsubmit {
 }
 
 div#userbar {
-	
+	width: 230px;
+	height: 60px;
 }
 
 div#main {
